# oauth2-rs

./: Cargo.toml  README.md
examples/client/client_credentials_flow/: Cargo.toml
examples/client/desktop_app_flow/: Cargo.toml  README.md
examples/client/device_flow/: Cargo.toml
examples/client/jwt_flow/: Cargo.toml
examples/client/password_credentials_flow/: Cargo.toml
examples/client/web_app_flow/: .gitignore  Cargo.toml  README.md
oauth2-cli/: Cargo.toml  README.md
oauth2-client/: Cargo.toml  README.md
oauth2-client/src/: lib.rs  provider.rs  re_exports.rs  utils.rs
oauth2-client/src/additional_endpoints/: access_token_obtain_from.rs  access_token_provider.rs  endpoint_builder.rs  endpoint_errors.rs  endpoint_execute_error.rs  endpoint_output_obtain_from.rs  grant_info.rs  mod.rs  refresh_access_token_endpoint.rs  revoke_access_token_endpoint.rs  types.rs  user_info.rs  user_info_endpoint.rs
oauth2-client/src/authorization_code_grant/: access_token_endpoint.rs  authorization_endpoint.rs  flow.rs  mod.rs  provider_ext.rs
oauth2-client/src/client_credentials_grant/: access_token_endpoint.rs  flow.rs  mod.rs  provider_ext.rs
oauth2-client/src/device_authorization_grant/: device_access_token_endpoint.rs  device_authorization_endpoint.rs  flow.rs  mod.rs  provider_ext.rs
oauth2-client/src/extensions/: builder.rs  endpoint_errors.rs  grant_info.rs  mod.rs  user_info.rs  user_info_endpoint.rs
oauth2-client/src/jwt_authorization_grant/: access_token_endpoint.rs  flow.rs  mod.rs  provider_ext.rs
oauth2-client/src/resource_owner_password_credentials_grant/: access_token_endpoint.rs  flow.rs  provider_ext.rs
oauth2-client/src/user_info/: mod.rs  provider_ext.rs
oauth2-core/: Cargo.toml  README.md
oauth2-core/src/: access_token_request.rs  access_token_response.rs  lib.rs  provider.rs  re_exports.rs  utils.rs
oauth2-core/src/authorization_code_grant/: access_token_response.rs  authorization_request.rs  authorization_response.rs  mod.rs  provider_ext.rs
oauth2-core/src/client_credentials_grant/: access_token_response.rs  mod.rs
oauth2-core/src/device_authorization_grant/: device_authorization_request.rs  device_authorization_response.rs  mod.rs  provider_ext.rs
oauth2-core/src/jwt_authorization_grant/: access_token_response.rs  mod.rs
oauth2-core/src/resource_owner_password_credentials_grant/: mod.rs
oauth2-core/src/types/: access_token_type.rs  client_password.rs  code_challenge_method.rs  code_verifier.rs  mod.rs  redirect_uri.rs  scope.rs
oauth2-github/: Cargo.toml
oauth2-github/src/: lib.rs
oauth2-lite/: Cargo.toml  README.md
oauth2-lite/src/: lib.rs
oauth2-lite/src/device_authorization_grant/: device_access_token_endpoint.rs  device_authorization_endpoint.rs  flow.rs  mod.rs
oauth2-server/: Cargo.toml  README.md
oauth2-signin/: Cargo.toml  README.md
oauth2-signin/integrations/axum/: Cargo.toml  README.md
oauth2-signin/integrations/poem/: Cargo.toml  README.md
oauth2-signin/integrations/warp/: Cargo.toml  README.md
oauth2-signin/src/: inner.rs  lib.rs  web_app.rs  web_app_flow.rs
oauth2-signin/src/web_app/: mod.rs  signin_flow.rs  signin_flow_with_dyn.rs  types.rs
oauth2_client_device_authorization_grant_demo/: Cargo.toml
oauth2_client_device_authorization_grant_demo/src/: github.rs  google.rs
oauth2_client_device_flow_demo/: Cargo.toml
oauth2_client_device_flow_demo/src/: github.rs  google.rs
oauth2_client_web_app_flow_demo/: .gitignore  Cargo.toml
oauth2_client_web_app_flow_demo/config/: clients.toml.example
oauth2_client_web_app_flow_demo/mkcert/: oauth2-rs.lvh.me-key.pem
oauth2_client_web_app_flow_demo/src/: main.rs
providers/oauth2-apple/: Cargo.toml  README.md
providers/oauth2-apple/docs/: Authorization_Code_Grant.md
providers/oauth2-apple/src/: authorization_code_grant.rs  client_credentials_grant.rs  lib.rs
providers/oauth2-doorkeeper/: Cargo.toml  README.md
providers/oauth2-doorkeeper/docs/: README.md
providers/oauth2-doorkeeper/src/: authorization_code_grant.rs  client_credentials_grant.rs  lib.rs  resource_owner_password_credentials_grant.rs
providers/oauth2-facebook/: Cargo.toml  README.md
providers/oauth2-facebook/docs/: Authorization_Code_Grant.md  Device_Authorization_Grant.md
providers/oauth2-facebook/src/: authorization_code_grant.rs  device_authorization_grant.rs  lib.rs
providers/oauth2-github/: Cargo.toml  README.md
providers/oauth2-github/docs/: Authorization_Code_Grant.md  Device_Authorization_Grant.md
providers/oauth2-github/src/: authorization_code_grant.rs  device_authorization_grant.rs  lib.rs  user_info.rs
providers/oauth2-gitlab/: Cargo.toml
providers/oauth2-gitlab/docs/: Authorization_Code_Grant.md
providers/oauth2-gitlab/src/: authorization_code_grant.rs  lib.rs
providers/oauth2-google/: Cargo.toml  README.md
providers/oauth2-google/docs/: Authorization_Code_Grant.md  Device_Authorization_Grant.md  JWT_Authorization_Grant.md  OpenID_Connect.md
providers/oauth2-google/src/: authorization_code_grant.rs  device_authorization_grant.rs  jwt_authorization_grant.rs  lib.rs  user_info.rs
providers/oauth2-linkedin/: Cargo.toml  README.md
providers/oauth2-linkedin/docs/: Authorization_Code_Grant.md
providers/oauth2-linkedin/src/: authorization_code_grant.rs  lib.rs
providers/oauth2-logingov/: Cargo.toml  README.md
providers/oauth2-logingov/docs/: Authorization_Code_Grant.md
providers/oauth2-microsoft/: Cargo.toml  README.md
providers/oauth2-microsoft/docs/: Authorization_Code_Grant.md  Device_Authorization_Grant.md  OpenID_Connect.md
providers/oauth2-microsoft/src/: authorization_code_grant.rs  device_authorization_grant.rs  lib.rs
providers/oauth2-twitch/: Cargo.toml  README.md
providers/oauth2-twitch/docs/: Authorization_Code_Grant.md
providers/oauth2-twitch/src/: authorization_code_grant.rs  lib.rs
providers/oauth2-wechat/: Cargo.toml
providers/oauth2-wechat/docs/: Authorization_Code_Grant.md
providers/oauth2-wechat/src/: authorization_code_grant.rs  lib.rs
providers/oauth2-zoho/: Cargo.toml  README.md
(+307 files in other folders)
