[workspace]
members = [
    "oauth2-amazon",
    "oauth2-cli",
    "oauth2-client",
    "oauth2_client_device_authorization_grant_demo",
    "oauth2-core",
    "oauth2-facebook",
    "oauth2-github",
    "oauth2-gitlab",
    "oauth2-google",
    "oauth2-instagram",
    "oauth2-lite",
    "oauth2-microsoft",
    "oauth2-server",
    "oauth2-wechat",
]
