[package]
name = "oauth2-cli"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Command-line utility"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-cli"
keywords = []
categories = []
readme = "README.md"

[[bin]]
name = "github_device_access_token_mgr"
path = "src/bin/github_device_access_token_mgr.rs"
required-features = ["with-github"]

[features]
default = ["with-github"]

with-github = ["oauth2-github"]

[dependencies]
oauth2-client = { version = "0.1", path = "../oauth2-client" }

oauth2-github = { version = "0.1", path = "../providers/oauth2-github", optional = true }

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
http-api-isahc-client = { version = "0.2", features = ["with-sleep-via-tokio"] }

pretty_env_logger = { version = "0.4" }
