[package]
name = "oauth2-client"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-client"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "with-authorization-code-grant",
    "with-device-authorization-grant",
    "with-additional-endpoints",
    # 
    "with-flow",
]

with-authorization-code-grant = ["oauth2-core/with-authorization-code-grant", "serde_qs"]
with-device-authorization-grant = ["oauth2-core/with-device-authorization-grant"]
with-additional-endpoints = ["http-api-client"]

with-flow = ["http-api-client"]

[dependencies]
oauth2-core = { version = "^0.0", path = "../oauth2-core" }

http-api-endpoint = { version = "0.1", default-features = false }
http-api-client = { version = "0.1", default-features = false, optional = true }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-enum-str = { version = "0.2", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_urlencoded = { version = "0.7", default-features = false }
serde_qs = { version = "0.8", default-features = false, optional = true }
url = { version = "2.2", default-features = false }

thiserror = { version = "1.0", default-features = false }
