[package]
name = "oauth2-client"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-client"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["with-flow"]

with-flow = ["http-api-client"]

[dependencies]
oauth2-core = { version = "^0.0", path = "../oauth2-core" }

http-api-client-endpoint = { version = "0.1", path = "../../http-api-endpoint/http-api-client-endpoint", default-features = false }
http-api-client = { version = "0.1", path = "../../http-api-endpoint/http-api-client", default-features = false, optional = true }

serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_urlencoded = { version = "0.7", default-features = false }
serde_qs = { version = "0.8", default-features = false }

rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
thiserror = { version = "1.0", default-features = false }
dyn-clone = { version = "1.0", default-features = false }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
