[package]
name = "oauth2-core"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Core"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-core"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "with-authorization-code-grant",
    "with-device-authorization-grant"
]

with-authorization-code-grant = []
with-device-authorization-grant = []

[dependencies]
http = { version = "0.2", default-features = false }
mime = { version = "0.3", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-enum-str = { version = "0.2", default-features = false }
serde_json = { version = "1.0", default-features = false }
url = { version = "2.2", default-features = false, features = ["serde"] }

[dev-dependencies]
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
