[package]
name = "oauth2-core"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Core"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-core"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
http = { version = "0.2", default-features = false }
mime = { version = "0.3", default-features = false }

serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde-enum-str = { version = "0.3", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
url = { version = "2.3", default-features = false, features = ["serde"] }

base64 = { version = "0.21", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
serde_json = { version = "1" }
serde_urlencoded = { version = "0.7" }
serde_qs = { version = "0.11" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
