[package]
name = "oauth2-lite"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-lite"
homepage = "https://github.com/bk-rs/oauth2-lite"
documentation = "https://docs.rs/oauth2-lite"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
features = ["with-authorization-code-grant", "with-device-authorization-grant"]

[features]
default = ["with-authorization-code-grant", "with-device-authorization-grant"]

with-authorization-code-grant = ["oauth2-core/with-authorization-code-grant"]
with-device-authorization-grant = ["oauth2-core/with-device-authorization-grant"]

[dependencies]
oauth2-core = { version = "^0.0", path = "../oauth2-core" }
