[package]
name = "oauth2-server"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Server"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-lite"
homepage = "https://github.com/bk-rs/oauth2-lite"
documentation = "https://docs.rs/oauth2-server"
keywords = []
categories = []
readme = "README.md"

[dependencies]
