[package]
name = "oauth2-signin"
version = "0.0.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "with-github",
    "with-google",
]

with-github = ["oauth2-github"]
with-google = ["oauth2-google"]

_priv = []

[dependencies]
oauth2-client = { version = "^0.0", path = "../oauth2-client", default-features = false, features = [
    "with-flow",
] }

oauth2-github = { version = "^0.0", path = "../providers/oauth2-github", optional = true }
oauth2-google = { version = "^0.0", path = "../providers/oauth2-google", optional = true }

[dev-dependencies]
oauth2-github = { version = "^0.0", path = "../providers/oauth2-github" }
oauth2-google = { version = "^0.0", path = "../providers/oauth2-google" }

http-api-isahc-client = { version = "0.1", default-features = false }

tokio = { version = "1.12", default-features = false, features = ["macros", "rt"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
denylist = [
    "with-github",
    "with-google",
    "_priv",
]
