[package]
name = "oauth2-signin"
version = "0.0.0"
edition = "2021"

[dependencies]
oauth2-client = { version = "^0.0", path = "../oauth2-client", default-features = false, features = [
    "with-flow",
] }

[dev-dependencies]
oauth2-github = { version = "^0.0", path = "../providers/oauth2-github" }
oauth2-google = { version = "^0.0", path = "../providers/oauth2-google" }

http-api-isahc-client = { version = "0.1", path = "../../http-api-endpoint/http-api-isahc-client", default-features = false }

tokio = { version = "1.12", default-features = false, features = ["macros", "rt"] }
