[package]
name = "oauth2-signin"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Signin"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-signin"
keywords = []
categories = []
readme = "README.md"

[dependencies]
oauth2-client = { version = "^0.0", path = "../oauth2-client", default-features = false, features = [
    "with-flow",
] }

[dev-dependencies]
oauth2-github = { version = "^0.0", path = "../providers/oauth2-github" }
oauth2-google = { version = "^0.0", path = "../providers/oauth2-google" }

http-api-isahc-client = { version = "0.2", default-features = false }

tokio = { version = "1.12", default-features = false, features = ["macros", "rt"] }
