[package]
name = "oauth2_client_device_flow_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "github"
path = "src/github.rs"

[[bin]]
name = "google"
path = "src/google.rs"

[dependencies]
oauth2-client = { version = "^0.0", path = "../oauth2-client", features = ["with-flow"] }

oauth2-github = { version = "^0.0", path = "../providers/oauth2-github" }
oauth2-google = { version = "^0.0", path = "../providers/oauth2-google" }

tokio = { version = "1.12", default-features = false, features = ["macros", "rt-multi-thread"] }
http-api-isahc-client = { version = "0.1", features = ["with-sleep-via-tokio"] }

pretty_env_logger = { version = "0.4" }
