[package]
name = "oauth2_client_web_app_flow_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2-signin = { version = "^0.0", path = "../oauth2-signin" }

oauth2-github = { version = "^0.0", path = "../providers/oauth2-github" }
oauth2-google = { version = "^0.0", path = "../providers/oauth2-google" }

tokio = { version = "1.12", default-features = false, features = ["macros", "rt-multi-thread"] }
http-api-isahc-client = { version = "0.1" }

warp = { version = "0.3", default-features = false, features = ["tls"] }
futures-util = { version = "0.3" }

serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.5" }

pretty_env_logger = { version = "0.4" }
log = { version = "0.4" }
