[package]
name = "oauth2-github"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 GitHub"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-github"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "with-authorization-code-grant",
    "with-device-authorization-grant"
]

with-authorization-code-grant = ["oauth2-client/with-authorization-code-grant"]
with-device-authorization-grant = ["oauth2-client/with-device-authorization-grant"]

[dependencies]
oauth2-client = { version = "^0.0", default-features = false, path = "../../oauth2-client" }
serde = { version = "1.0", default-features = false }
