[package]
name = "oauth2-gitlab"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 GitLab"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-gitlab"
keywords = []
categories = []
readme = "README.md"

[dependencies]
oauth2-client = { version = "^0.0", path = "../../oauth2-client", default-features = false }
serde = { version = "1.0", default-features = false }

oauth2-doorkeeper = { version = "^0.0", path = "../oauth2-doorkeeper", default-features = false }
