[package]
name = "oauth2-wechat"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Wechat"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-wechat"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "with-authorization-code-grant",
]

with-authorization-code-grant = ["oauth2-core/with-authorization-code-grant"]

[dependencies]
oauth2-core = { version = "^0.0", path = "../../oauth2-core" }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-enum-str = { version = "0.2", default-features = false }

serde_qs = { version = "0.8", default-features = false }
serde_urlencoded = { version = "0.7", default-features = false }
thiserror = { version = "1.0", default-features = false }
