[package]
name = "oauth2-zoho"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OAuth 2.0 Zoho"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/oauth2-rs"
homepage = "https://github.com/bk-rs/oauth2-rs"
documentation = "https://docs.rs/oauth2-zoho"
keywords = []
categories = []
readme = "README.md"

[dependencies]
oauth2-client = { version = "0.2", path = "../../oauth2-client", default-features = false }
serde = { version = "1", default-features = false }
