[package]
name = "oauth2_client_client_credentials_flow_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client_credentials_flow_mastodon_social"
path = "src/mastodon_social.rs"

[[bin]]
name = "client_credentials_flow_apple_search_ads_api"
path = "src/apple_search_ads_api.rs"

[dependencies]
oauth2-client = { path = "../../../oauth2-client", features = ["with-flow"] }

oauth2-mastodon = { path = "../../../providers/oauth2-mastodon" }
oauth2-apple = { path = "../../../providers/oauth2-apple" }

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
http-api-isahc-client = { version = "0.2", features = ["with-sleep-via-tokio"] }

pretty_env_logger = { version = "0.4" }
