[package]
name = "oauth2_client_desktop_app_flow_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mastodon_social"
path = "src/mastodon_social.rs"

[[bin]]
name = "google"
path = "src/google.rs"

[dependencies]
oauth2-client = { version = "^0.0", path = "../../../oauth2-client", features = ["with-flow"] }

oauth2-mastodon = { version = "^0.0", path = "../../../providers/oauth2-mastodon" }
oauth2-google = { version = "^0.0", path = "../../../providers/oauth2-google" }

tokio = { version = "1.12", default-features = false, features = ["macros", "rt-multi-thread"] }
http-api-isahc-client = { version = "0.2", path = "../../../../http-api-endpoint/http-api-isahc-client", features = ["with-sleep-via-tokio"] }

web-view = { version = "0.7" }

pretty_env_logger = { version = "0.4" }
