[package]
name = "oauth2_client_device_flow_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "device_flow_github"
path = "src/github.rs"

[[bin]]
name = "device_flow_google"
path = "src/google.rs"

[[bin]]
name = "device_flow_facebook"
path = "src/facebook.rs"

[[bin]]
name = "device_flow_amazon"
path = "src/amazon.rs"

[[bin]]
name = "device_flow_microsoft"
path = "src/microsoft.rs"

[[bin]]
name = "device_flow_baidu"
path = "src/baidu.rs"

[dependencies]
oauth2-client = { version = "0.1", path = "../../../oauth2-client", features = ["with-flow"] }

oauth2-github = { version = "0.1", path = "../../../providers/oauth2-github" }
oauth2-google = { version = "0.1", path = "../../../providers/oauth2-google" }
oauth2-facebook = { version = "0.1", path = "../../../providers/oauth2-facebook" }
oauth2-amazon = { version = "0.1", path = "../../../providers/oauth2-amazon" }
oauth2-microsoft = { version = "0.1", path = "../../../providers/oauth2-microsoft" }
oauth2-baidu = { version = "0.1", path = "../../../providers/oauth2-baidu" }

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
http-api-isahc-client = { version = "0.2", features = ["with-sleep-via-tokio"] }

pretty_env_logger = { version = "0.4" }
