[package]
name = "oauth2_client_web_app_flow_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warp"
path = "src/warp.rs"

[[bin]]
name = "poem"
path = "src/poem.rs"

[dependencies]
oauth2-signin = { version = "^0.0", path = "../../../oauth2-signin" }
http-api-isahc-client = { version = "0.2", path = "../../../../http-api-endpoint/http-api-isahc-client" }

oauth2-github = { version = "^0.0", path = "../../../providers/oauth2-github" }
oauth2-google = { version = "^0.0", path = "../../../providers/oauth2-google" }
oauth2-twitch = { version = "^0.0", path = "../../../providers/oauth2-twitch" }
oauth2-mastodon = { version = "^0.0", path = "../../../providers/oauth2-mastodon" }
oauth2-apple = { version = "^0.0", path = "../../../providers/oauth2-apple" }

tokio = { version = "1.12", default-features = false, features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3" }
async-trait = { version = "0.1" }


warp = { version = "0.3", default-features = false, features = ["tls"] }
warp-sessions = { version = "1.0", default-features = false }


poem = { version = "1.0", features = ["tls", "session"] }


serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.5" }
pretty_env_logger = { version = "0.4" }
log = { version = "0.4" }
